--- a/src/components/ImageInput/style.css
+++ b/src/components/ImageInput/style.css
@@ -1,10 +1,10 @@
-.declareForm label .dropzone{
+.dropzone{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  max-width: 200px;
+  max-width: stretch;
   min-height: 300px;
 
   color: #10afc4;
@@ -14,11 +14,11 @@
   cursor: pointer;
 }
 
-label .dropzone input{
+.dropzone input{
   display: none;
 }
 
-label .dropzone .dropzone-thumbnail{
+.dropzone .dropzone-thumbnail{
   width: 100%;
   height: 300px;
   background-size: cover;
